--- a/public/css/style.css
+++ b/public/css/style.css
@@ -58,7 +58,7 @@
 		display:block;
 		padding:100px 0;
 		position:relative;
-		background-color:#f7f7f7;
+		background-color:rgba(220,220,220, 0.7);
 	}
 	.block-gray {
 		display:block;
@@ -177,11 +177,12 @@
 	
 	
 	.title h2 {
-		color:#fcc60f;
+		color:#dcdcdc;
 		text-transform:uppercase;
 		font-family: 'Roboto', sans-serif;
 		font-weight:700;
 		font-size: 20px;
+
 	}
 	
 	.transparent .title h2 {
@@ -236,7 +237,7 @@
 
 		display:block;
 		position:relative;
-		background-color:#F7C221;
+		background-color:#dcdcdc;
 	}
 	
 	#accordion h2{
@@ -770,6 +771,7 @@
 	.tp-banner {
 		width:100%;
 		position:relative;
+
 	}
 	.tp-banner-fullscreen-container {
 		width:100%;
@@ -1201,6 +1203,7 @@
 	.testimonial p {
 		font-weight: 600;
 		font-size: 18px;
+		margin-bottom:40px; 
 		color: #000;
 		padding: 30px 0 2px 0px;
 	}
@@ -1693,7 +1696,7 @@
 		display:block;
 		padding:70px 0;
 		position:relative;
-		background-color:rgba(0,0,0, 0.8);
+		background-color:#dcdcdc;
 	}
 	
 	.contact-wrapper h2 {
@@ -2058,6 +2061,7 @@
 	
 	.videooverlay .general-title h2 {
 		color:#000;
+
 	}
 	
 	.video-js {width:100%; height:100%;}
@@ -2716,9 +2720,33 @@
 		.small_title,
 		.slider_menu a {display:none}
 	}
+
+	.contact-box .fa {
+	margin-bottom: -30px;
+	margin-top: 20px 
+	}
+
+
+	.title h2{
+
+		margin-top: 80px;
+	}
 	
 	ul.nav.navbar-nav.navbar-right {
 		background: rgba(0, 0, 0, 0.55);
+	}
+
+	.feature-wrapper{
+
+		margin-top:-40px;
+	}
+
+
+	.testimonial h4{
+
+		line-height:25px;
+		padding: 15px;
+		font-size: 14px;
 	}
 
 	.block-gray img {
@@ -2756,6 +2784,11 @@
 
 	.app-feature{
 		margin-top:60px;
+	}
+
+	.title h2{
+
+		color: #fcc60f;
 	}
 	
 	}
